--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,27 @@
 body {
     background-image: url("https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/easy-pescatarian-recipes-1557518379.jpg?crop=1.00xw:1.00xh;0,0&resize=1200:*");
-    background-color: transparent;
 }
 
 p {
     color: black;
 }
+
+.topSection {
+    text-align: center;
+}
+
+
+.topImg {
+    justify-content: right;
+    opacity: ;
+}
+
+.middleSection {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+
+
